@@ -1,3 +1,10 @@
+2011-10-18  Reinhard Max  <max@suse.de>
+
+	* library/clock.tcl (::tcl::clock::GetSystemTimeZone): Cache the
+	time zone only if it was detected by one of the expensive
+	methods. Otherwise after unsetting TCL_TZ or TZ the previous value
+	will still be used.
+
 2011-10-15  Venkat Iyer <venkat@comit.com>
 	* library/tzdata/America/Sitka : Update to Olson's tzdata2011l
 	* library/tzdata/Pacific/Fiji
